--- a/templates/error.html
+++ b/templates/error.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div>
+<div class="alert alert-danger text-center" role="alert">
     <h2>Error</h2>
     <p>{{ error_message }}</p>
-    <a href="{{ url_for('index') }}">Go back to the homepage</a>
+    <a href="{{ url_for('routes.index') }}" class="btn btn-primary mt-3">Go Back to Homepage</a>
 </div>
 {% endblock %}
